plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.back'
version = '0.0.1-SNAPSHOT'
description = 'resello'

ext {
    set('springCloudVersion', '2025.1.0')
    set('jjwtVersion', '0.12.3')
    set('querydslVersion', '5.1.0')
    set('springdocVersion', '3.0.1')
}

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    dependencies {
        // Spring Core
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-webmvc'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // Actuator, Prometheus
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'io.micrometer:micrometer-registry-prometheus'

        // Swagger
        implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"

        // Jackson
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

        // Database
        runtimeOnly 'org.postgresql:postgresql'

        // Kafka
        implementation 'org.springframework.boot:spring-boot-starter-kafka'

        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        // DevTools
        developmentOnly 'org.springframework.boot:spring-boot-devtools'

        // Test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

// common, security 모듈 bootJar 비활성화
configure(subprojects.findAll { it.name in ['common', 'security'] }) {
    bootJar.enabled = false
    jar.enabled = true
}

// QueryDSL 설정 ( common, settlement, market 모듈만 )
configure(subprojects.findAll { it.name in ['common', 'settlement', 'market'] }) {
    def querydslDir = "${layout.buildDirectory.get()}/generated/querydsl"

    sourceSets {
        main.java.srcDirs += querydslDir
    }

    tasks.withType(JavaCompile).configureEach {
        options.generatedSourceOutputDirectory.set(file(querydslDir))
    }

    clean {
        delete file(querydslDir)
    }
}

bootJar.enabled = false
